testsuite/tests/typecheck/should_fail/tcfail216.stderr

tcfail216.hs:4:1: error:
    • Potential superclass cycle for ‘A’
        one of whose superclass constraints is headed by a type variable:
          ‘cls (A cls)’
      Use UndecidableSuperClasses to accept this
    • In the class declaration for ‘A’
